Remove unused lines of code, refactor code for changed function
