# pkg/load/api/handler/agent_handler.go
@@ -2,9 +2,11 @@ package handler
 
 import (
 	"fmt"
+	"log"
+	"net/http"
+
 	"github.com/cloud-barista/cm-ant/pkg/load/api"
 	"github.com/cloud-barista/cm-ant/pkg/load/services"
-	"net/http"
 
 	"github.com/labstack/echo/v4"
 )
@@ -18,12 +20,13 @@ import (
 // @Produce			json
 // @Param			loadEnvReq 		body 	api.AgentReq 			true 		"agent install request"
 // @Success			200	{object}			map[string]string					`{ "message": "success", "agentId":  agentId }`
-// @Failure			400	{object}			string								"request body is not correct"
-// @Failure			500	{object}			string								"internal server error"
+// @Failure			400	{object}			map[string]string								`{ "message": "nsId and mcisId must set", }`
+// @Failure			400	{object}			map[string]string								`{ "message": "pass me correct body;", }`
+// @Failure			500	{object}			map[string]string								"internal server error"
 // @Router			/ant/api/v1/load/agent 		[post]
 func InstallAgent() echo.HandlerFunc {
 	return func(c echo.Context) error {
-		agentReq := api.AgentReq{}
+		agentReq := api.AntTargetServerReq{}
 
 		if err := c.Bind(&agentReq); err != nil {
 			return echo.NewHTTPError(http.StatusBadRequest, map[string]any{
@@ -32,16 +35,51 @@ func InstallAgent() echo.HandlerFunc {
 
 		}
 
-		agentId, err := services.InstallAgent(agentReq)
+		if agentReq.NsId == "" || agentReq.McisId == "" {
+			return echo.NewHTTPError(http.StatusBadRequest, map[string]any{
+				"message": "nsId and mcisId must set",
+			})
+		}
+
+		err := services.InstallAgent(agentReq)
 
 		if err != nil {
-			return echo.NewHTTPError(http.StatusBadRequest, map[string]any{
-				"message": fmt.Sprintln("something went wrong", err),
+			return echo.NewHTTPError(http.StatusInternalServerError, map[string]any{
+				"message": err,
 			})
 		}
 		return c.JSON(http.StatusOK, map[string]any{
-			"agentId": agentId,
 			"message": "success",
+		})
+	}
+}
+
+// GetAllAgentInstallInfo
+// @Id				GetAllAgentInstallInfo
+// @Summary
+// @Description
+// @Tags			[Agent - for Development]
+// @Accept			json
+// @Produce			json
+// @Success			200	{object}		map[string]string					`{ "message": "success", "result":  result, }`
+// @Failure			500	{object}		map[string]string					`{ "message": "something went wrong.try again.", }`
+// @Router			/ant/api/v1/load/agent 		[get]
+func GetAllAgentInstallInfo() echo.HandlerFunc {
+	return func(c echo.Context) error {
+
+		result, err := services.GetAllAgentInstallInfo()
+
+		if err != nil {
+			log.Println(err)
+			return echo.NewHTTPError(http.StatusInternalServerError, map[string]any{
+				"message": "something went wrong.try again.",
+			})
+
+		}
+
+		return c.JSON(http.StatusOK, map[string]any{
+			"message": "success",
+			"result":  result,
 		})
 	}
 }
@@ -53,25 +91,25 @@ func InstallAgent() echo.HandlerFunc {
 // @Tags			[Agent - for Development]
 // @Accept			json
 // @Produce			json
-// @Param			agentId 			path 	string 			true 		"agentId"
-// @Success			200	{object}		map[string]string					`{ "message": "success" }`
-// @Failure			400	{object}		string								"request body is not correct"
-// @Failure			500	{object}		string								"internal server error"
-// @Router			/ant/api/v1/load/agent/{agentId} 		[delete]
+// @Param			agentInstallInfoId 			path 	string 			true 		"agent installation info id"
+// @Success			200	{object}		map[string]string					`{ "message": "success", }`
+// @Failure		400	{object}			map[string]string					`{ "message": "pass me correct agentId", }`
+// @Failure			500	{object}		map[string]string					`{ "message": "error message", }`
+// @Router			/ant/api/v1/load/agent/{agentInstallInfoId} 		[delete]
 func UninstallAgent() echo.HandlerFunc {
 	return func(c echo.Context) error {
-		agentId := c.Param("agentId")
+		agentId := c.Param("agentInstallInfoId")
 
 		if agentId == "" {
 			return echo.NewHTTPError(http.StatusBadRequest, map[string]any{
-				"message": fmt.Sprintf("pass me correct agentId\n"),
+				"message": "pass me correct agentId",
 			})
 		}
 
 		err := services.UninstallAgent(agentId)
 
 		if err != nil {
-			return echo.NewHTTPError(http.StatusBadRequest, map[string]any{
+			return echo.NewHTTPError(http.StatusInternalServerError, map[string]any{
 				"message": fmt.Sprintln("something went wrong", err),
 			})
 		}
@@ -79,15 +117,5 @@ func UninstallAgent() echo.HandlerFunc {
 		return c.JSON(http.StatusOK, map[string]any{
 			"message": "success",
 		})
-	}
-}
-
-func MockMigration() echo.HandlerFunc {
-	return func(c echo.Context) error {
-		err := services.MockMigration("")
-		if err != nil {
-			return err
-		}
-		return nil
 	}
 }
